# school-report-checker-teacher

./: .gitignore  app.py  pyproject.toml
src/: ai_helpers.py  checker.py  config.py  database.py  models.py  parsers.py  prompts.py
